--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 #content {
@@ -45,12 +46,12 @@ html, body {
 
 #todoform {
     position: absolute;
-    width: 800px;
-    height: 800px;
+    width: 50vw;
+    height: 30vw;
     z-index: 1;
     top: 50%;
     left: 50%;
-    margin: -400px 0 0 -400px;
+    margin: -15vw 0 0 -25vw;
     background: rgb(203, 255, 244);
     border: 3px solid black;
 }
