--- a/src/style.css
+++ b/src/style.css
@@ -64,12 +64,11 @@ html, body {
     text-align: center;
 }
 
-#todoform > input[name=important] {
+#todoform > label:last-of-type {
     margin-bottom: auto;
 }
 
 #todoform > button {
-    margin: 15px 50px 15px 50px;
     height: 5em;
 }
 
