--- a/src/style.css
+++ b/src/style.css
@@ -36,15 +36,33 @@ html, body {
     flex-direction: column;
     border-right: 3px solid black;
     overflow: auto;
+    overflow-wrap: break-word;
     background-color: rgb(185, 185, 185);
     background-image: linear-gradient(to bottom, rgb(185, 185, 185), rgb(218, 216, 216));
 }
 
+#projectsarea > p {
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    margin: 0;
+    text-align: center;
+    padding: 2px 0px 2px 0px;
+}
+
+#projectsarea > div {
+    padding: 5px 3px 3px 5px;
+}
+
+#projectsarea > div:hover {
+    background-color: rgb(89, 110, 106);
+}
+
 #projecttodosarea {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1;
     grid-template-areas: 
-        "todos todoinfo todoinfo"
+        "todos todoinfo todoinfo todoinfo todoinfo todoinfo"
     ;
     grid-area: main;
     background-color: khaki;
@@ -53,11 +71,47 @@ html, body {
 
 #todos {
     grid-area: todos;
-    
+    display: flex;
+    flex-direction: column;
+    border-right: 3px solid black;
+    overflow: auto;
+    overflow-wrap: break-word;
+    background-image: linear-gradient(to bottom, rgb(136, 135, 135), rgb(180, 179, 179))
+}
+
+#todos > div:hover:not(:first-child) {
+    background-color: rgb(71, 71, 71);
+}
+
+#todos > div:nth-last-child(1) {
+    margin-bottom: auto;
+}
+
+#todos > div:only-child {
+    margin: auto 0 0 0;
+}
+
+.probtns {
+    display: flex;
+    justify-content: space-evenly;
+    order: 1;
+    padding: 30px 0 30px 0;
 }
 
 #todoinfo {
     grid-area: todoinfo;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#todoinfo > div > button {
+    width: 25em;
+    height: 5em;
+}
+
+#todoinfo > p:last-of-type {
+    margin-bottom: auto;
 }
 
 #renameform {
@@ -117,19 +171,4 @@ label > textarea {
     box-shadow: 0 0 8px;
     border-radius: 25px;
     border: 0;
-}
-
-#projectsarea > p {
-    border-bottom: 2px solid black;
-    border-top: 2px solid black;
-    margin: 0;
-    text-align: center;
-}
-
-#projectsarea > div {
-    padding: 5px 3px 3px 5px;
-}
-
-#projectsarea > div:hover {
-    background-color: rgb(89, 110, 106);
 }
