--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ html, body {
     margin: 0;
     text-align: center;
     padding: 2px 0px 2px 0px;
+    order: 1;
 }
 
 #projectsarea > div {
@@ -79,15 +80,19 @@ html, body {
     background-image: linear-gradient(to bottom, rgb(136, 135, 135), rgb(180, 179, 179))
 }
 
-#todos > div:hover:not(:first-child) {
+#todos > div {
+    padding: 5px 5px 5px 5px;
+}
+
+#todos > div:hover {
     background-color: rgb(71, 71, 71);
 }
 
-#todos > div:nth-last-child(1) {
+#todos > *:last-child {
     margin-bottom: auto;
 }
 
-#todos > div:only-child {
+#todos > span:only-child {
     margin: auto 0 0 0;
 }
 
@@ -110,8 +115,8 @@ html, body {
     height: 5em;
 }
 
-#todoinfo > p:last-of-type {
-    margin-bottom: auto;
+#todoinfo > p:first-of-type {
+    margin: 0 20px auto 20px;
 }
 
 #renameform {
